Externals/zlib/configure.log
--------------------
./configure
Mon Nov 23 21:30:07 EET 2015
=== ztest13391.c ===
extern int getchar();
int hello() {return getchar();}
===
cc -c ztest13391.c
... using cc

Checking for obsessive-compulsive compiler options...
=== ztest13391.c ===
int foo() { return 0; }
===
cc -c -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp ztest13391.c

Checking for shared library support...
=== ztest13391.c ===
extern int getchar();
int hello() {return getchar();}
===
cc -w -c -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp ztest13391.c
cc -shared -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp -o ztest13391.so ztest13391.o
Building shared library libz.so.1.2.8 with cc.

=== ztest13391.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
cc -c -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp -D_LARGEFILE64_SOURCE=1 ztest13391.c
ztest13391.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include/sys/_types/_off_t.h:30:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest13391.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
cc -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp -o ztest13391 ztest13391.c
Checking for fseeko... Yes.

=== ztest13391.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
cc -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp -o ztest13391 ztest13391.c
Checking for strerror... Yes.

=== ztest13391.c ===
#include <unistd.h>
int main() { return 0; }
===
cc -c -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp ztest13391.c
Checking for unistd.h... Yes.

=== ztest13391.c ===
#include <stdarg.h>
int main() { return 0; }
===
cc -c -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp ztest13391.c
Checking for stdarg.h... Yes.

=== ztest13391.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
cc -c -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp ztest13391.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest13391.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
cc -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp -o ztest13391 ztest13391.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest13391.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
cc -c -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp ztest13391.c
Checking for return value of vsnprintf()... Yes.

ALL = static shared
AR = ar
ARFLAGS = rc
CC = cc
CFLAGS = -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp
CPP = cc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS =
LDSHARED = cc -shared
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -arch x86_64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.5 -pipe -no-cpp-precomp
SHAREDLIB = libz.so
SHAREDLIBM = libz.so.1
SHAREDLIBV = libz.so.1.2.8
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /usr/local
sharedlibdir = ${libdir}
uname = Darwin 15.0.0
--------------------


